[package]
name = "rust_bug"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

lto = true
panic = "abort"

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
